* bugfix issue #67: Show the discount gained by the discount field of the product in the product single view.

--- a/template/example_locallang_xml.html
+++ b/template/example_locallang_xml.html
@@ -438,7 +438,7 @@
 				###LIST_ITEM_NUMBER### ###PRODUCT_ITEMNUMBER###
 			###GW2E###<br>
 
-                        ###GW2B###<b>###LIST_ITEM_PRICE###</b> <strong> <font color=red><span id="###ARTICLE_PRICE_TAX_ID###">###PRICE_TAX###</span>  ###P_CURRENCY###</font></strong><strong><font color=red> </font></strong>
+                        ###GW2B###<b>###LIST_ITEM_PRICE###</b> <strong> <font color=red><span id="###PRICE_TAX_ID###">###PRICE_TAX###</span>  ###P_CURRENCY###</font></strong><strong><font color=red> </font></strong>
 					###INCL_VAT###,&nbsp;###PLUS###
 					<b><a href="index.php?id=###PID_DELIVERY######LANGPARAM###">###SHIPPING###</a></b>###GW2E###<br>
 						###GW2B###(###NO_VAT### ###PRICE_NO_TAX###) (###VAT###
