--- a/template/products_css_variants_de.html
+++ b/template/products_css_variants_de.html
@@ -233,8 +233,8 @@
 	<dl>
     <dd id="web_price_SINGLE">
 
-            Web-Preis: <span id="###ARTICLE_PRICE_TAX_ID###">###ARTICLE_PRICE_TAX###</span> &euro;
-					(enth. MwSt.: <span id="###ARTICLE_PRICE_ONLY_TAX_ID###">###ARTICLE_PRICE_ONLY_TAX###</span> &euro;)
+            Web-Preis: <span id="###PRICE_TAX_ID###">###PRICE_TAX###</span> &euro;
+					(enth. MwSt.: <span id="###PRICE_ONLY_TAX_ID###">###PRICE_ONLY_TAX###</span> &euro;)
     </dd>
 	</dl>
   	<div id="anzahl_SINGLE">
