* bugfix: ###ARTICLE markers must be replaced in the product list view.

--- a/template/products_css_variants_de.html
+++ b/template/products_css_variants_de.html
@@ -103,8 +103,8 @@
   </div>
   <div class="web_price_LIST">
 
-            Preis: <span id="###ARTICLE_PRICE_TAX_ID###">###ARTICLE_PRICE_TAX###</span> &euro;
-	<div class="web_price_MWST">(enth. MwSt.: <span class="###ARTICLE_PRICE_ONLY_TAX_ID###">###ARTICLE_PRICE_ONLY_TAX###</span> &euro;)</div>
+            Preis: <span id="###ARTICLE_PRICE_TAX_ID###">###PRICE_TAX###</span> &euro;
+	<div class="web_price_MWST">(enth. MwSt.: <span class="###ARTICLE_PRICE_ONLY_TAX_ID###">###PRICE_ONLY_TAX###</span> &euro;)</div>
   </div>
   <div class="anzahl_LIST">
     ###GW1B### Anzahl: ###GW1E### <input size="4" maxlength="6" type="text" name="###FIELD_NAME###" value="###FIELD_QTY###">
