add ###TAX### marker example

--- a/template/products_css_variants_de.html
+++ b/template/products_css_variants_de.html
@@ -497,7 +497,7 @@ Andrea: Warenkorbansicht Anfang -->
 	<!-- ###display_variant5_giftService### -->
       </div>
       <div id="PRICE_TAX_BASKET2">
-        ###GW1B### ###PRICE_TAX###<br>(MwSt. ###PRICE_ONLY_TAX###)###GW1E###
+        ###GW1B### ###PRICE_TAX###<br>(MwSt. ###PRICE_ONLY_TAX###) ###TAX### %  ###GW1E###
       </div>
       <div id="FIELD_QTY_BASKET2">
         <input size="5" maxlength="6" type="text" name="###FIELD_NAME_BASKET###" value="###FIELD_QTY###">
