fix image paths

--- a/template/example_locallang_xml.html
+++ b/template/example_locallang_xml.html
@@ -186,7 +186,7 @@
 
 				<!-- ###LOGIN_TEMPLATE### begin -->
 					<!-- ###LINK_MEMO_ADD### begin -->
-					<img name="addtomemo" src="###PATH_FE_REL###res/icons/fe/addmemo.png" title="auf die Merkliste">
+					<img name="addtomemo" src="###PATH_FE_REL###Resources/Public/Images/addmemo.png" title="auf die Merkliste">
 					<!-- ###LINK_MEMO_ADD### end -->
 				<!-- ###LOGIN_TEMPLATE### end -->
 
@@ -364,7 +364,7 @@
 
 				<!-- ###LOGIN_TEMPLATE### begin -->
 					<!-- ###LINK_MEMO_ADD### begin -->
-					<img name="addtomemo" src="###PATH_FE_REL###res/icons/fe/addmemo.png" title="auf die Merkliste">
+					<img name="addtomemo" src="###PATH_FE_REL###Resources/Public/Images/addmemo.png" title="auf die Merkliste">
 					<!-- ###LINK_MEMO_ADD### end -->
 				<!-- ###LOGIN_TEMPLATE### end -->
 
@@ -641,7 +641,7 @@
 
             <!-- ###LOGIN_TEMPLATE### begin -->
 				<!-- ###LINK_MEMO_ADD### begin -->
-				<img name="addtomemo" src="###PATH_FE_REL###res/icons/fe/addmemo.png" title="auf die Merkliste">
+				<img name="addtomemo" src="###PATH_FE_REL###Resources/Public/Images/addmemo.png" title="auf die Merkliste">
 				<!-- ###LINK_MEMO_ADD### end -->
 			<!-- ###LOGIN_TEMPLATE### end -->
 				<input type="submit" name="order" value="###LIST_BUY_NOW###" onClick="if(!document.forms['###FORM_NAME###']['###FIELD_NAME###'].value!=''){document.forms['###FORM_NAME###']['###FIELD_NAME###'].value=1;};">
@@ -1072,10 +1072,10 @@
                                         ###GW2B### ###LIST_ITEM_QUANTITY### ###GW2E###<br><input size="3" maxlength="4" type="text" name="###FIELD_NAME###" value="###FIELD_QTY###">
                                 </td>
                                 <td style="padding: 2px 2px 2px 2px; border-top: 1px dotted #3F4F73;">
-									<input type="image" name="order" src="###PATH_FE_REL###res/icons/fe/minibasket1.gif" value="###LIST_BUY_NOW###" onClick="if (!document.forms['###FORM_NAME###']['###FIELD_NAME###'].value!=''){document.forms['###FORM_NAME###']['###FIELD_NAME###'].value=1;};">
+									<input type="image" name="order" src="###PATH_FE_REL###Resources/Public/Images/minibasket1.gif" value="###LIST_BUY_NOW###" onClick="if (!document.forms['###FORM_NAME###']['###FIELD_NAME###'].value!=''){document.forms['###FORM_NAME###']['###FIELD_NAME###'].value=1;};">
 								</td>
 				<td style="padding: 2px 2px 2px 2px; border-top: 1px dotted #3F4F73;">
-					<input type="image" name="remove" src="###PATH_FE_REL###res/icons/fe/delmemo.png" value="von der Merkliste streichen" onClick="document.getElementsByName('###FORM_NAME###')[0].action='###FORM_MEMO###&amp;tt_products%5Bdelmemo%5D=###PRODUCT_UID###';">
+					<input type="image" name="remove" src="###PATH_FE_REL###Resources/Public/Images/delmemo.png" value="von der Merkliste streichen" onClick="document.getElementsByName('###FORM_NAME###')[0].action='###FORM_MEMO###&amp;tt_products%5Bdelmemo%5D=###PRODUCT_UID###';">
 				</td>
               </tr>
               </form>
