fix country code error

--- a/template/products_css_variants_de.html
+++ b/template/products_css_variants_de.html
@@ -883,7 +883,7 @@ Exact same features as BASKET_TEMPLATE
       <input type="radio" name="recs[delivery][radio1]" ###DELIVERY_RADIO1_1### value="1"> Ja<br>
     </div>
     <div id="field_DELIVERY_FOUNDBY">
-      ###GW1B###<strong>Wie sind Sie auf uns aufmerksam geworden?:</strong>###GW1E###
+      ###GW1B###<strong>Wie sind Sie auf uns aufmerksam geworden?</strong>###GW1E###
       ###DELIVERY_FOUNDBY_SELECTOR###
     </div>
     <div id="field_DELIVERY_FOUNDBY_OTHERS">
