fix undefined array indices

--- a/template/products_css_variants_de.html
+++ b/template/products_css_variants_de.html
@@ -1040,9 +1040,10 @@ Exact same features as BASKET_TEMPLATE
     ###GW1B###Email:###GW1E###
   </div>-->
   <div id="text_PERSON_EMAIL_BASKET_PAYMENT_TEMPLATE3">
-    ###GW1B###<strong>###PERSON_EMAIL###</strong>###GW1E### ###GW2B###<br>
+    ###GW1B###<strong>###PERSON_EMAIL###</strong>###GW1E###<br>
   </div>
   <div id="text_email_BASKET_PAYMENT_TEMPLATE3">
+    ###GW2B###
     (An diese Email-Adresse wird die Best&auml;tigung Ihrer Bestellung geschickt!)###GW2E###<br>
   </div>
 </div>
@@ -1074,7 +1075,7 @@ Exact same features as BASKET_TEMPLATE
   </div>-->
   <div id="DELIVERY_CITY_BASKET_PAYMENT_TEMPLATE4">
 	  ###GW1B###<strong>###DELIVERY_ZIP### ###DELIVERY_CITY###</strong>###GW1E###
-	</DIV>
+  </div>
 	<!--<div id="text_DELIVERY_COUNTRY_BASKET_PAYMENT_TEMPLATE4">
 	  ###GW1B###Land:###GW1E###
   </div>  -->
@@ -1091,9 +1092,10 @@ Exact same features as BASKET_TEMPLATE
     ###GW1B###Email:###GW1E###
   </div>  -->
   <div id="DELIVERY_EMAIL_BASKET_PAYMENT_TEMPLATE4">
-    ###GW1B###<strong>###DELIVERY_EMAIL###</strong>###GW1E### ###GW2B###<br>
+    ###GW1B###<strong>###DELIVERY_EMAIL###</strong>###GW1E###<br>
   </div>
   <div id="text_email_DELIVERY_EMAIL_BASKET_PAYMENT_TEMPLATE4">
+    ###GW2B###
     (An diese Email-Adresse wird die Best&auml;tigung Ihrer Bestellung geschickt!)###GW2E###<br>
   </div>
   <div id="text_DELIVERY_DESIRED_DATE_BASKET_PAYMENT_TEMPLATE4">
@@ -1102,21 +1104,15 @@ Exact same features as BASKET_TEMPLATE
   <div id="DELIVERY_DESIRED_DATE_BASKET_PAYMENT_TEMPLATE4">
     ###GW1B###<strong>###DELIVERY_DESIRED_DATE###</strong>###GW1E###
   </div>
-  <div id="text_DELIVERY_BEMERKUNGEN_BASKET_PAYMENT_TEMPLATE4">
-    ###GW2B###<b>Bemerkungen:</b>###GW2E###
-  </div>
   <div id="text_DELIVERY_FOUNDBY_PAYMENT_TEMPLATE4">
     ###GW2B###<b>gefunden &uuml;ber:</b>
 	###DELIVERY_FOUNDBY###
 	###DELIVERY_FOUNDBY_OTHERS### ###GW2E###
   </div>
-  <div id="text_DELIVERY_BEMERKUNGEN_BASKET_PAYMENT_TEMPLATE4">
-    ###GW2B###<b>Bemerkungen:</b>###GW2E###
-  </div>
   <div id="text_DELIVERY_NOTE_DISPLAY_BASKET_PAYMENT_TEMPLATE4">
     ###GW1B###Kommentar:###GW1E###
   </div>
-  <div id="text_DELIVERY_NOTE_DISPLAY_BASKET_PAYMENT_TEMPLATE4">
+  <div id="DELIVERY_NOTE_DISPLAY_BASKET_PAYMENT_TEMPLATE4">
     ###GW1B###<strong>###DELIVERY_NOTE_DISPLAY###</strong>###GW1E###
   </div>
 </div>
@@ -1141,7 +1137,7 @@ Exact same features as BASKET_TEMPLATE
     ###GW1B######PAYMENT_IMAGE### ###PAYMENT_TITLE### ###GW1E### ###GW1B###
   </div>-->
   <div id="PRICE_PAYMENT_BASKET_PAYMENT_TEMPLATE6">
-    <b>inkl. MwSt. ###PRICE_PAYMENT_TAX###</b><br>
+    ###GW1B###<strong>inkl. MwSt. ###PRICE_PAYMENT_TAX###</strong><br>
     (exkl. MwSt. ###PRICE_PAYMENT_NO_TAX###)###GW1E###
   </div>
 </div>
